# zanpy

./: Cargo.toml  README.md  pyproject.toml  test.py
.cargo/: config.toml
.github/workflows/: release.yml
crates/zanpy-core/: Cargo.toml
crates/zanpy-core/src/: array.rs  lib.rs  lin_alg.rs  ops.rs
crates/zanpy-py/: Cargo.toml
crates/zanpy-py/src/: lib.rs
